// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

package digital_twin_consumer;

service DigitalTwinConsumer {
    rpc Publish (PublishRequest) returns (PublishResponse);
    rpc Respond (RespondRequest) returns (RespondResponse);
}

message PublishRequest {
   string entity_id = 1;
   string value = 2;
}

message PublishResponse {
}

message RespondRequest {
    string entity_id = 1;
    string response_id = 2;
    string payload = 3;
}

message RespondResponse {
}